--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "next": "^13.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
