--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "immer": "^10.0.2",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
