--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/babel-plugin": "^11.10.6",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.2.4",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "prettier": "^2.8.7",
