--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/public/*": ["./public/*"],
+      "@/images/*": ["./public/images/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
-  "types": ["types"],
-  "paths": {
-    "@/*": ["./src/*"],
-    "@/public/*": ["./public/*"],
-    "@/images/*": ["./public/images/*"]
-  }
+  "types": ["types"]
 }
