--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
