--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "redux": "^4.2.1",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.1",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "prettier": "^2.8.7",
