--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-js-pagination": "^3.0.3",
     "react-paginate": "^8.2.0",
     "redux": "^4.2.1",
     "uuid": "^9.0.0",
@@ -31,6 +32,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.2.4",
+    "@types/react-js-pagination": "^3.0.4",
     "@types/uuid": "^9.0.1",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
