--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "immer": "^10.0.2",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-js-pagination": "^3.0.3",
     "react-paginate": "^8.2.0",
     "redux": "^4.2.1",
     "uuid": "^9.0.0",
@@ -29,6 +30,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@emotion/babel-plugin": "^11.10.6",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.2.4",
