--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.3",
     "@tanstack/react-query": "^4.29.15",
     "@tanstack/react-query-devtools": "^4.29.15",
+    "axios": "^1.4.0",
     "immer": "^10.0.2",
     "next": "^13.3.0",
     "react": "^18.2.0",
