--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-paginate": "^8.2.0",
-    "redux": "^4.2.1",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
