--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^4.29.15",
     "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
@@ -23,7 +24,6 @@
     "react-hook-form": "^7.43.9",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
